# cotton-icons

./: .gitignore  README.md  generate.py  generate_lucide.py  generate_tabler.py  pyproject.toml
cotton_icons/templates/cotton/: icon_map.json
cotton_icons/templates/cotton/heroicon/: academic_cap.html  adjustments_horizontal.html  adjustments_vertical.html  archive_box.html  archive_box_arrow_down.html  archive_box_x_mark.html  arrow_down.html  arrow_down_circle.html  arrow_down_left.html  arrow_down_on_square.html  arrow_down_on_square_stack.html  arrow_down_right.html  arrow_down_tray.html  arrow_left.html  arrow_left_circle.html  arrow_left_end_on_rectangle.html  arrow_left_on_rectangle.html  arrow_left_start_on_rectangle.html  arrow_long_down.html  arrow_long_left.html  arrow_long_right.html  arrow_long_up.html  arrow_path.html  arrow_path_rounded_square.html  arrow_right.html  arrow_right_circle.html  arrow_right_end_on_rectangle.html  arrow_right_on_rectangle.html  arrow_right_start_on_rectangle.html  arrow_small_down.html  arrow_small_left.html  arrow_small_right.html  arrow_small_up.html  arrow_top_right_on_square.html  arrow_trending_down.html  arrow_trending_up.html  arrow_turn_down_left.html  arrow_turn_down_right.html  arrow_turn_left_down.html  arrow_turn_left_up.html  (+285 more)
cotton_icons/templates/cotton/lucideicon/: a_arrow_down.html  a_arrow_up.html  a_large_small.html  accessibility.html  activity.html  air_vent.html  airplay.html  alarm_clock.html  alarm_clock_check.html  alarm_clock_minus.html  alarm_clock_off.html  alarm_clock_plus.html  alarm_smoke.html  (+1688 more)
(+4981 files in other folders)
